# app.grocery_shopping

./: .gitignore  Dockerfile  Makefile  README.md  debian-requirements.txt  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_and_push.yml  test_script.yml
notebooks/: scrap.ipynb
src/: __main__.py  base.py  get_prices.py  main.py  main.tex  web_api.py
src/Woolworths/: scrape_woolworths.py
src/api/: web.py
src/coles/: get_product_prices.py
src/data/: get_prices.py  make_dataset.py
src/features/: build_features.py
src/woolis/: woolies.py
src/woolworths/: get_product_prices.py  woolies_helper.py
tests/: test_get_prices.py  test_make_dataset.py  test_web_api.py
