[tool.poetry]
name = "app.grocery_shopping"
version = "0.1.0"
description = ""
authors = ["Humberto STEIN SHIROMOTO <h.stein.shiromoto@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
pandas = "^1.3.0"
beautifulsoup4 = "^4.9.3"
selenium = "^3.141.0"
typeguard = "^2.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
ipykernel = "^6.0.1"
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
